# ecommunication

./: .gitignore  CMakeLists.txt
clang/: README.md
doc/: scope_defer.md
script/: run_clang_format.py
src/: CMakeLists.txt
src/include/socket/: socket.h
src/include/util/: scope_defer.h  time.h
src/socket/: socket.cpp
test/: CMakeLists.txt  backtrace.cpp
test/socket/: socket_test.cpp
test/util/: scope_defer_test.cpp  time_test.cpp
